force-app/main/default/objects/Qst_Survey_Question__c/Qst_Survey_Question__c.object-meta.xml
<CustomObject>
    <description>This is a Survey Question Custom Object.</description>
    <label>Qst_Survey_Question</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qst_Survey_Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>