force-app/main/default/objects/Qst_Survey_Question__c/fields/Qst_Survey__c.field-meta.xml
<CustomField>
    <fullName>Qst_Survey__c</fullName>
    <label>Qst Survey</label>
    <referenceTo>Qst_Survey__c</referenceTo>
    <relationshipLabel>Qst Survey Question</relationshipLabel>
    <relationshipName>Qst_Survey_Question</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>