force-app/main/default/objects/Qst_Survey_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description>Text for Survey question</description>
    <inlineHelpText>Text for Survey question</inlineHelpText>
    <label>Question Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>