force-app/main/default/objects/Qst_Survey_Question__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Rating 1-5 or other values</description>
    <inlineHelpText>Rating 1-5 or other values</inlineHelpText>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>