force-app/main/default/objects/Qst_Survey_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Qst_Survey__c</columns>
    <columns>Question_Text__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>